# ChangeLog for app-accessibility/brltty
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.55 2007/06/12 03:02:09 williamh Exp $

*brltty-3.8 (12 Jun 2007)

  12 Jun 2007; William Hubbs <williamh@gentoo.org> metadata.xml,
  +brltty-3.8.ebuild:
  Version bump.

  01 Jun 2007; William Hubbs <williamh@gentoo.org>
  +files/brltty-3.7.2-linux-compiler-h.patch, brltty-3.7.2-r1.ebuild:
  Added the patch from fedora to fix bug #155887.
  Also cleaned up the dependencies.

  29 Mar 2007; William Hubbs <williamh@gentoo.org> brltty-3.7.2-r1.ebuild:
  Fixed a typo that prevented installing the startup script.

*brltty-3.7.2-r1 (28 Mar 2007)

  28 Mar 2007; William Hubbs <williamh@gentoo.org> +files/brltty.rc,
  +brltty-3.7.2-r1.ebuild:
  Add a startup script (closes #171591).

  22 Feb 2007; Doug Goldstein <cardoe@gentoo.org> ChangeLog, Manifest:
  Manifest2 fix

  22 Feb 2007; Doug Goldstein <cardoe@gentoo.org> ChangeLog:
  Manifest2 fix

  21 Feb 2007; <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  19 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> brltty-3.7.2.ebuild:
  Stable on Alpha + ia64.

  01 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org> brltty-3.7.2.ebuild:
  hppa stable, bug #142935

  28 Sep 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  brltty-3.7.2.ebuild:
  stable on ppc (Bug #142935)

  25 Sep 2006; Jason Wever <weeve@gentoo.org> brltty-3.7.2.ebuild:
  Stable on SPARC wrt bug #142935.

  25 Sep 2006; <blubb@gentoo.org> brltty-3.7.2.ebuild:
  stable on amd64

  24 Sep 2006; Markus Rothe <corsair@gentoo.org> brltty-3.7.2.ebuild:
  Stable on ppc64; bug #142935

  24 Sep 2006; William Hubbs <williamh@gentoo.org> brltty-3.7.2.ebuild:
  Stable on x86.

  20 Sep 2006; William Hubbs <williamh@gentoo.org>
  +files/brltty-3.7.2-nostrip.patch, brltty-3.7.2.ebuild:
  Resolved QA issues in Bug #142934.
  Thanks, Solar, for the patches.
