@@ -10,49 +10,33 @@ AUX brltty.rc 515 RMD160 4a08e401894b8f9869e9c214f5cb3858a84584ef SHA1 9e367f90e
 MD5 6c0c867f0f214f51db205728fba99eef files/brltty.rc 515
 RMD160 4a08e401894b8f9869e9c214f5cb3858a84584ef files/brltty.rc 515
 SHA256 78ef3c062aedc63bba1eff122eaa6de3f97531f65aaa13803fd27cdbf0d787e9 files/brltty.rc 515
-DIST brltty-3.5.tar.gz 968152 RMD160 b1cb5a4fdcd243ea9db84224b3e8323cdfa2a150 SHA1 6102b4280c649263a85411088fb456e42bae5a1b SHA256 3c59a6ca9a8a06e08c4f10eef5825ae9a6ba6274bffa898cd922665c7ada838a
 DIST brltty-3.6.1.tar.gz 1072871 RMD160 9331cf373ef16ef0a0b9addceffd2d1757070595 SHA1 097bfe5c2b9c04839c36ee708c420f008c3afb12 SHA256 a1d26cb72aa8e73a613f6b5d368a2e2178ac85f1b3a53c0175caa2488bf2e1de
-DIST brltty-3.6.tar.gz 1060457 RMD160 904eab1665715002b7b03d1766e0237bd67188a9 SHA1 e77f0999ccaf5d98cee44c23269b997e28144fe8 SHA256 f10f75f98060b9d8a0a7bcb3a2c0ca2f9b96630a131385b2cc7d367faf7b9916
 DIST brltty-3.7.2.tar.gz 1193139 RMD160 30b9df4243ce7f0140e1bdcdf53b6bacea135f88 SHA1 0aa8a51a03687acddadbd422f5dff688a5a89b97 SHA256 1f39a08947833299c6ca6c6dbbc84f6b27a375bb7efe62cf9eebd8d5cdaa6934
 DIST brltty-3.8.tar.gz 1641781 RMD160 c7c5447b10dee9aa4636473c133be4eba8603cae SHA1 d6d12254aa9a01fb34d1665027bc894c28e75e79 SHA256 9c230a8f35486fbdecb54745c88ee1c1cb2fb5baf6b403dcc0108936349b7f8b
-EBUILD brltty-3.5.ebuild 668 RMD160 664bd153c5617a1a156ff046805fa86f2f6779dc SHA1 6e386629b139d63a57b38d215bb90cd8565ce00f SHA256 617c40f892c93c191191216dfbf48115c4ae225e8f30d977a8ba3b84c6cda2f6
-MD5 ed6064c0dfb5c85968e61ed01b5cd891 brltty-3.5.ebuild 668
-RMD160 664bd153c5617a1a156ff046805fa86f2f6779dc brltty-3.5.ebuild 668
-SHA256 617c40f892c93c191191216dfbf48115c4ae225e8f30d977a8ba3b84c6cda2f6 brltty-3.5.ebuild 668
 EBUILD brltty-3.6.1-r1.ebuild 926 RMD160 12ebc5a31a9de6ba58de477053612c564db1158b SHA1 f31232f3e928d779f6a3b372b6a95ddae8389ab0 SHA256 01f493bc0cac98424cdff9be29044300bdbb6485941729932aaed73254257220
 MD5 5bf4ee6fcb7993e2d0bbb9dbaa1c48a6 brltty-3.6.1-r1.ebuild 926
 RMD160 12ebc5a31a9de6ba58de477053612c564db1158b brltty-3.6.1-r1.ebuild 926
 SHA256 01f493bc0cac98424cdff9be29044300bdbb6485941729932aaed73254257220 brltty-3.6.1-r1.ebuild 926
-EBUILD brltty-3.6.ebuild 883 RMD160 4ed8107ddd8b3014cfe017de13ac77a9ca3eb043 SHA1 abc985ea26336d2985612b41b88680bd8fa0eb55 SHA256 90f7ca54b3961f8e1053f20a526eba59191f917e4d17f6471f705119a997f064
-MD5 5ce1e793de71daf22e755f423a8213d0 brltty-3.6.ebuild 883
-RMD160 4ed8107ddd8b3014cfe017de13ac77a9ca3eb043 brltty-3.6.ebuild 883
-SHA256 90f7ca54b3961f8e1053f20a526eba59191f917e4d17f6471f705119a997f064 brltty-3.6.ebuild 883
-EBUILD brltty-3.7.2-r1.ebuild 1675 RMD160 f31c19606ba464e457a775923fba974c273ecc4c SHA1 2cd5ada426503a390dd02ae3f02c57413ffa332f SHA256 306be56f9fe30f8efd4e2f6b3c3db4e661a0bccfd43cffb68b1683de0944f66d
-MD5 88eaf6788845a0d66bbf34638040fe63 brltty-3.7.2-r1.ebuild 1675
-RMD160 f31c19606ba464e457a775923fba974c273ecc4c brltty-3.7.2-r1.ebuild 1675
-SHA256 306be56f9fe30f8efd4e2f6b3c3db4e661a0bccfd43cffb68b1683de0944f66d brltty-3.7.2-r1.ebuild 1675
-EBUILD brltty-3.7.2.ebuild 1404 RMD160 e2f19e93ffc8afa4482149dadc8bb85bb0cce4b4 SHA1 a8190079b0633201de96ac012008587022c340ff SHA256 b6d9f63c915d6cf91197db86c58591cb670ce80d7409347f1fce239c9706fee1
-MD5 0063584a75aeb875c9c4f8ea1466fc45 brltty-3.7.2.ebuild 1404
-RMD160 e2f19e93ffc8afa4482149dadc8bb85bb0cce4b4 brltty-3.7.2.ebuild 1404
-SHA256 b6d9f63c915d6cf91197db86c58591cb670ce80d7409347f1fce239c9706fee1 brltty-3.7.2.ebuild 1404
-EBUILD brltty-3.8.ebuild 1576 RMD160 149824f700bd9645861f2db180a6369ae5ee2f82 SHA1 5142b007db61e37da04277a44b79393ffd356e1f SHA256 8db1539b2e55681e0a2fefdbd97ddd05a2ef7c9884bf576d2ede1df0d99ae0f6
-MD5 e30f0a67978290f879e5868bcd2081a1 brltty-3.8.ebuild 1576
-RMD160 149824f700bd9645861f2db180a6369ae5ee2f82 brltty-3.8.ebuild 1576
-SHA256 8db1539b2e55681e0a2fefdbd97ddd05a2ef7c9884bf576d2ede1df0d99ae0f6 brltty-3.8.ebuild 1576
-MISC ChangeLog 6690 RMD160 0a02d127ac00d2d8cd2bf72285768ab31db18e2d SHA1 d1d0eb2a9aab53b81b827c656f161a877a5291cf SHA256 1dfda82ae99b672f54531b8add0f75cd61aae576063b91dbb11c8d87b12e0b0f
-MD5 33053e0be49e44fb8b7e59565100b37e ChangeLog 6690
-RMD160 0a02d127ac00d2d8cd2bf72285768ab31db18e2d ChangeLog 6690
-SHA256 1dfda82ae99b672f54531b8add0f75cd61aae576063b91dbb11c8d87b12e0b0f ChangeLog 6690
+EBUILD brltty-3.7.2-r1.ebuild 1658 RMD160 da9e4ed97a63da0a1f3c371b9edf07f5902cde61 SHA1 3004e39877864e298fd0d06389901726a6a28ee3 SHA256 cbf945c705cc9aedc6067b5eb21193510ba19d03a60e99ee660eba9d6d5e3383
+MD5 d1b43dca3a3e0b668a29e0731d931d40 brltty-3.7.2-r1.ebuild 1658
+RMD160 da9e4ed97a63da0a1f3c371b9edf07f5902cde61 brltty-3.7.2-r1.ebuild 1658
+SHA256 cbf945c705cc9aedc6067b5eb21193510ba19d03a60e99ee660eba9d6d5e3383 brltty-3.7.2-r1.ebuild 1658
+EBUILD brltty-3.7.2.ebuild 1305 RMD160 206fd762eb6c9265990b6a4972d871fea84e156f SHA1 8e489419b3be339d2bc8a5dad84ab867326be70c SHA256 29c2277873faa93bd7e39ef55298791242762a7c189ff63103fbc147e165e999
+MD5 5472df2ec7755ddd2a8c1969182d9c9c brltty-3.7.2.ebuild 1305
+RMD160 206fd762eb6c9265990b6a4972d871fea84e156f brltty-3.7.2.ebuild 1305
+SHA256 29c2277873faa93bd7e39ef55298791242762a7c189ff63103fbc147e165e999 brltty-3.7.2.ebuild 1305
+EBUILD brltty-3.8.ebuild 1560 RMD160 9881cb081aaedb12b94a04acd81b4a2b685e7694 SHA1 51699d312fc07ee7a65635db44570c4043c67851 SHA256 8894ccd43f3ed5b9b36d9553c9e799466ccdaf3a74feed1a657093c9ffe31899
+MD5 b951630de4af7deea2c1c1f60dad2022 brltty-3.8.ebuild 1560
+RMD160 9881cb081aaedb12b94a04acd81b4a2b685e7694 brltty-3.8.ebuild 1560
+SHA256 8894ccd43f3ed5b9b36d9553c9e799466ccdaf3a74feed1a657093c9ffe31899 brltty-3.8.ebuild 1560
+MISC ChangeLog 6901 RMD160 908490ffaeb7613d85b992566a9cf54eb77827d9 SHA1 62f3b91da96c3115026c4cea1042ec426f21bfb3 SHA256 4a3b34bae2551b0e56c2f2cd1deb5493014a3af3ce0d79083de2ec8564763e52
+MD5 acec7ef382c5245e51778694adc083e0 ChangeLog 6901
+RMD160 908490ffaeb7613d85b992566a9cf54eb77827d9 ChangeLog 6901
+SHA256 4a3b34bae2551b0e56c2f2cd1deb5493014a3af3ce0d79083de2ec8564763e52 ChangeLog 6901
 MISC metadata.xml 1369 RMD160 f0aa05366cea60a6c6fcf6c571d092c4ed90b79a SHA1 0b429c95350460c3a22ba05c7894b519e7a046dc SHA256 66e8c95b51326f8a993ce54b41590035e01d1e81438f6f187ccccb9392cbedf9
 MD5 d04dec3d252ee51559c6ba1c80a0fcf3 metadata.xml 1369
 RMD160 f0aa05366cea60a6c6fcf6c571d092c4ed90b79a metadata.xml 1369
 SHA256 66e8c95b51326f8a993ce54b41590035e01d1e81438f6f187ccccb9392cbedf9 metadata.xml 1369
-MD5 6342bd59b179c987029af198bcb2bba0 files/digest-brltty-3.5 232
-RMD160 f5916c0bf558b1e5924f5f1fb1dc3b8234f500a7 files/digest-brltty-3.5 232
-SHA256 a1fab0527912f80ed75e8eb54cdf1161fa74976a0290ea3284db7b6cf582ca98 files/digest-brltty-3.5 232
-MD5 08c5ffb9b416612339e010fb1cdf8b27 files/digest-brltty-3.6 235
-RMD160 534e14556233b345d1174b44c976a2df485ec0be files/digest-brltty-3.6 235
-SHA256 2e44903fb5caea642841fdd8725bcbbd44ae9ba4c48179dfc4ab6d642574fab8 files/digest-brltty-3.6 235
 MD5 222b7269984c006be427c8e7ddce0d07 files/digest-brltty-3.6.1-r1 241
 RMD160 e8ad70845622c8ebfc7576853908d17e76b0b03d files/digest-brltty-3.6.1-r1 241
 SHA256 f62e8a13d5a3be178a6cb6323af8da397f8f62e83f3a629fb6e6e8e0e2c7ca78 files/digest-brltty-3.6.1-r1 241
