@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/brltty-3.7.2-r1.ebuild,v 1.4 2007/07/15 23:02:29 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/brltty-3.7.2-r1.ebuild,v 1.5 2007/07/22 03:55:18 williamh Exp $
 
 inherit eutils multilib toolchain-funcs
 
@@ -14,7 +14,7 @@ KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE="doc gpm usb X"
 
 DEPEND=" gpm? ( >=sys-libs/gpm-1.20 )
-	X? ( || ( x11-libs/libXaw virtual/x11 ) )"
+	X? ( x11-libs/libXaw )"
 
 src_unpack() {
 	unpack ${A}
@@ -24,9 +24,9 @@ src_unpack() {
 }
 
 src_compile() {
-	econf `use_enable gpm` \
-		`use_with X x` \
-		`use_enable usb usb-support` \
+	econf $(use_enable gpm) \
+		$(use_with X x) \
+		$(use_enable usb usb-support) \
 		--prefix=/ \
 		--includedir=/usr/include || die
 	make || die
