@@ -1,3 +1,0 @@
-MD5 ba3b8c94e237d134c7a25011d285e26e brltty-3.5.tar.gz 968152
-RMD160 b1cb5a4fdcd243ea9db84224b3e8323cdfa2a150 brltty-3.5.tar.gz 968152
-SHA256 3c59a6ca9a8a06e08c4f10eef5825ae9a6ba6274bffa898cd922665c7ada838a brltty-3.5.tar.gz 968152
