@@ -1,3 +1,0 @@
-MD5 98790932a3cbc78d507bfa90a7e11f8c brltty-3.6.tar.gz 1060457
-RMD160 904eab1665715002b7b03d1766e0237bd67188a9 brltty-3.6.tar.gz 1060457
-SHA256 f10f75f98060b9d8a0a7bcb3a2c0ca2f9b96630a131385b2cc7d367faf7b9916 brltty-3.6.tar.gz 1060457
