@@ -1,3 +1,0 @@
-MD5 e5e2dae5f385e86795a74b58310f287f brltty-3.6.1.tar.gz 1072871
-RMD160 9331cf373ef16ef0a0b9addceffd2d1757070595 brltty-3.6.1.tar.gz 1072871
-SHA256 a1d26cb72aa8e73a613f6b5d368a2e2178ac85f1b3a53c0175caa2488bf2e1de brltty-3.6.1.tar.gz 1072871
