@@ -1,6 +1,11 @@
 # ChangeLog for app-accessibility/brltty
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.55 2007/06/12 03:02:09 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.56 2007/07/22 03:55:18 williamh Exp $
+
+  22 Jul 2007; William Hubbs <williamh@gentoo.org> -brltty-3.5.ebuild,
+  -brltty-3.6.ebuild, brltty-3.7.2.ebuild, brltty-3.7.2-r1.ebuild,
+  brltty-3.8.ebuild:
+  Cleaned up the ebuilds and removed old versions.
 
 *brltty-3.8 (12 Jun 2007)
 
